k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-analyser
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: video-analyser
