k8s/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: video-analyser
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: REPLACEME
    http:
      paths:
      - path: /
        backend:
          servicePort: http
          serviceName: video-analyser
